<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="prefFirstDayOfWeekLong">Configure with which day a week starts</string>
    <string name="prefFirstDayOfWeek">First day of the week</string>
    <string name="prefPaymentTabTypeLong">Show payment for weeks, month or hide it.</string>
    <string name="prefPaymentTabType">Payment Tab</string>
    <string name="prefPaymentShowLong">App needs to be restarted.</string>
    <string name="prefPaymentLong">Only available in full version…</string>
    <string name="prefPaymentOvertimeLong">Pay Rate for overtime working hours</string>
    <string name="prefPaymentOvertime">Overtime Pay Rate</string>
    <string name="prefPaymentRegularLong">Pay Rate for normal working hours</string>
    <string name="prefPaymentRegular">Regular Pay Rate</string>
    <string name="prefPayment">Payment</string>
    <string name="prefIs24hours">24h timeformat</string>
    <string name="prefOvertimeHandlingLong">Defines timeframe for overtime calculation</string>
    <string name="prefKeyOvertimeResetPointLong">Calculate overtime per week, month or year</string>
    <string name="prefOvertimeResetPoint">Calculate overtime for …</string>
    <string name="prefKeyOvertimeResetPoint">prefKeyOvertimeResetPoint</string>
    <string name="prefOvertimeResetIfBiggerTrue">Only restart overtime calculation if the overtime is bigger than reset value</string>
    <string name="prefOvertimeResetIfBiggerFalse">Always restart overtime calculation.</string>
    <string name="prefOvertimeResetIfBigger">Restart only if bigger</string>
    <string name="prefOvertimeResetMinTimeLong">Number of hours to reset to</string>
    <string name="prefOvertimeResetMinTime">Reset Value</string>
    <string name="prefOvertimeResetSettings">Overtime Restart Settings</string>
    <string name="prefOvertimeResetInterval">Overtime Restart Interval</string>
    <string name="prefOvertimeHandling">Overtime Handling</string>
    <string name="prefTimestampHandling">Timestamp Handling</string>
    <string name="prefNightshift">Enable nightshifts</string>
    <string name="prefNightshiftLongOff">If IN and OUT is not in the same day a error is displayed.</string>
    <string name="prefNightshiftLongOn">IN and OUT can be in different days</string>
    <string name="mailBody">See attachment for CSV export.</string>
    <string name="menu_insert_day">Insert day</string>
    <string name="app_name">clock card</string>
    <string name="TimestampTypeIn">IN</string>
    <string name="TimestampTypeOut">OUT</string>
    <string name="ButtonTSList">Timestamp List</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_insert">Insert</string>
    <string name="menu_insert_timestamp">Insert timestamp</string>
    <string name="menu_edit">Edit</string>
    <string name="ButtonDayList">Days</string>
    <string name="menu_rebuild">Rebuild</string>
    <string name="TextViewWorkedShort">Worked </string>
    <string name="TextViewOvertimeShort">Overtime </string>
    <string name="LabelHoursTarget">target</string>
    <string name="LabelHolyday">Holiday</string>
    <string name="LabelOvertimeTotal">total</string>
    <string name="LabelOvertimeTotalLong">Overtime total</string>
    <string name="LabelHoliday">Holidays</string>
    <string name="LabelHolidayLeft">Holidays left</string>
    <string name="HintHolidaysLeft">Total holiday days left</string>
    <string name="HintOvertime">Overtime hours</string>
    <string name="LabelOvertime">Overtime</string>
    <string name="CheckBoxFixed">Not automatically updated</string>
    <string name="TextViewHolidaysLeft">left</string>
    <string name="LabelTimestamps">Timestamps</string>
    <string name="optionMore">more</string>
    <string name="monthListTitle">clock card: Month List</string>
    <string name="ExportTImestamps">E-mail export as CSV</string>
    <string name="deleteDay">Delete day</string>
    <string name="delteSubTimestamps">Delete timestamps as well?</string>
    <string name="dayMo">Monday</string>
    <string name="dayTue">Tuesday</string>
    <string name="workdays">Workdays</string>
    <string name="perferences">Preferences</string>
    <string name="prefHoursPerDay">Workinghours per day</string>
    <string name="prefHoursPerDayLong">Number of hours to work per day</string>
    <string name="prefLicence">Beta Key</string>
    <string name="prefLicenceLong">Key to unlock beta features</string>
    <string name="prefLicenceDefault"></string>
    <string name="prefWorkday">Work</string>
    <string name="prefWorkdayLong">Settings about a day of work</string>
    <string name="prefExportSync">Export and sync</string>
    <string name="prefExportSyncLong">Export and sync settings</string>
    <string name="prefVarious">Various</string>
    <string name="prefMinTimestampDiff">Minimal timestamp difference</string>
    <string name="prefMinTimestampDiffLong">inimal difference of two timestamps in seconds</string>
    <string name="prefEmailAddress">e-mail address</string>
    <string name="prefEmailAddressLong">e-mail address to send exports to</string>
    <string name="prefCsvFieldSeparator">CSV Field Separator</string>
    <string name="prefCsvFieldSeparatorLong">Separator between the fields in the exported CSV</string>
    <string name="prefDecimalFromLong">used in CSV export if empty use locale else see java reference.</string>
    <string name="defaultHoursPerDay">8.24</string>
    <string name="LabelHoursWorked">Worked</string>
    <string name="TextViewLeaveNotIn">…start working!</string>
    <string name="LabelBuyFullVersion">	This feature is not available in the free version, please buy the<a href="market://search?q=pname:ch.almana.android.stechkarteLicense">full version.</a></string>
    <string name="delete">delete</string>
    <string name="deleteDayOnly">Delete day only</string>
    <string name="deleteDayAndTS">Delete day and its timestamps</string>
    <string name="cannotSaveTS">Cannot save timestamp to database. Dublicate
		timestamp?</string>
    <string name="emailExportSubject">clock card timestamps</string>
    <string name="LabelHolidayStart">Start</string>
    <string name="LabelHolidayEnd">End</string>
    <string name="ButtonHolidayDateNone">no date given</string>
    <string name="MenuHolidayEditor">Holiday Editor</string>
    <string name="labelHolidayDurationStart">Duration on stating day:</string>
    <string name="labelHolidayDurationEnd">Duration on ending day:</string>
    <string name="LabelDay">days</string>
    <string name="CheckBoxFillupDay">Fill up not worked hours</string>
    <string name="CheckBoxIsPayed">Paid</string>
    <string name="EditTextCommentHint">Comment</string>
    <string name="dayEditorTitle">Day Editor</string>
    <string name="monthViewTitle">Month View</string>
    <string name="weekViewTitle">Week View</string>
    <string name="timestampEditorTitle">Timestamp Editor</string>
    <string name="preferencesTitle">Preferences</string>
    <string name="holidayEditorTitle">Holiday Editor</string>

    <array name="holidayBorderType">
        <item name="allday">all day</item>
        <item name="halfday">half day</item>
        <!--
        calculation needs to be implemented if activated
        <item name="restofday">rest of day</item>
        <item name="specify">specify</item>
        -->
    </array>

    <string-array name="overtimeResetEntries">
        <item>none</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>
    <string-array name="prefPaymentTabEntries">
        <item>week</item>
        <item>month</item>
        <item>hide</item>
    </string-array>
    <string-array name="prefFirstDayOfWeekEntries">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="prefWorkHours">Workinghours setting</string>
    <string name="prefWorkHoursLong">Default settings for hours to work per day</string>
    <string name="prefWorkHoursCategory">Default</string>
    <string name="prefWorkHoursWeekCategory">Weekday</string>
    <string name="prefWorkHoursMon">Workinghours on Monday</string>
    <string name="prefWorkHoursMonLong">Set to -1 to use default</string>
    <string name="prefWorkHoursTue">Workinghours on Tuesday</string>
    <string name="prefWorkHoursTueLong">Set to -1 to use default</string>
    <string name="prefWorkHoursWed">Workinghours on Wednesday</string>
    <string name="prefWorkHoursWedLong">Set to -1 to use default</string>
    <string name="prefWorkHoursThu">Workinghours on Thursday</string>
    <string name="prefWorkHoursThuLong">Set to -1 to use default</string>
    <string name="prefWorkHoursFri">Workinghours on Friday</string>
    <string name="prefWorkHoursFriLong">Set to -1 to use default</string>
    <string name="prefWorkHoursSat">Workinghours on Saturday</string>
    <string name="prefWorkHoursSatLong">Set to -1 to use default</string>
    <string name="prefWorkHoursSun">Workinghours on Sunday</string>
    <string name="prefWorkHoursSunLong">Set to -1 to use default</string>
    <string name="LabelHours">hours</string>
    <string name="label_tab_main">Main</string>
    <string name="label_tab_days">Days</string>
    <string name="label_tab_weeks">Weeks</string>
    <string name="label_week">Week</string>
    <string name="label_tab_payment">Payment</string>
    <string name="tabel_tab_months">Months</string>
    <string name="appwidget_label_last_timestamp">Last timestamp</string>
    <string name="label_overtime">Overtime</string>
    <string name="label_leave_at">Leave at</string>
    <string name="hint_comment">Comment</string>
    <string name="label_total">total</string>
    <string name="label_left">left</string>
    <string name="prefUI">User interface</string>
    <string name="prefCalaculation">Time Calculation</string>
    <string name="prefChangelog">Show Changelog</string>
    <string name="label_version">Version:</string>
    <string name="notAvailable">not available</string>
    <string name="title_changelog">Changelog</string>
    <string name="prefDataManagement">Data Management</string>
    <string name="prefDataManagementLong">Export, backup and restore</string>
    <string name="prefBackupRestore">Backup &amp; Restore</string>
    <string name="prefRestore">Restore backup</string>
    <string name="cbIsHoliday">Holiday</string>
    <string name="cbIsYearly">Yearly</string>
    <string name="labelTimeoffType">Type</string>
    <string name="labelNumHolidayDays">Days</string>
    <string name="timeoff_type_name_holidays">Holidays</string>
    <string name="timeoff_type_name_illness">Illness</string>
    <string name="timeoff_type_name_public_holiday">Public holiday</string>
    <string name="timeoff_type_name_unpaid_holidays">Unpaid holidays</string>
    <string name="buEditTimeoffType">Edit</string>
    <string name="title_delete_last_timestamp">Delete last timestamp?</string>
    <string name="msg_delete_last_timestamp">Do you really want to delete the last timestamp?</string>
    <string name="msg_rebuilding">Rebuilding...</string>
    <string name="cbYieldsOvertime">Yields overtime</string>
    <string name="label_tab_holidays">Holidays</string>
    <string name="title_delete_holidays">Delete holidays</string>
    <string name="msg_delete_holidays">Do you really want to delete this holiday?</string>
    <string name="title_delete_day">Delete Day...</string>

</resources>