<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/LabelHolidayStart"
				android:text="@+string/LabelHolidayStart" android:textSize="@dimen/title_fontsize" android:paddingRight="5dp"></TextView>
			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical">
		
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@+string/ButtonHolidayDateNone" android:id="@+id/ButtonHolidayDateStart"></Button>
				<LinearLayout android:id="@+id/LinearLayout01"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:orientation="vertical">
				
				<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/LabelHolidayDurationStart" android:text="@string/labelHolidayDurationStart" android:paddingRight="5dp"></TextView><EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="50dp" android:paddingRight="5dp" android:id="@+id/EditTextHolidayDurationStart"></EditText>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/LabelDayStart" android:text="@string/LabelDay" android:paddingLeft="5dp"></TextView>
			</LinearLayout><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CheckBoxFillupDay" android:id="@+id/CheckBoxFillupDayStart"></CheckBox>
			

</LinearLayout>



</LinearLayout>
</TableRow><TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/LabelHolidayEnd" android:text="@+string/LabelHolidayEnd" android:textSize="@dimen/title_fontsize" android:paddingRight="5dp"></TextView><LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
			
			<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@+string/ButtonHolidayDateNone" android:id="@+id/ButtonHolidayDateEnd"></Button><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
				
				<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingRight="5dp" android:id="@+id/LabelHolidayDurationEnd" android:text="@string/labelHolidayDurationEnd"></TextView><EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="50dp" android:paddingRight="5dp" android:id="@+id/EditTextHolidayDurationEnd"></EditText>
<TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:id="@+id/LabelDayStart" android:text="@string/LabelDay" android:paddingLeft="5dp"></TextView>
</LinearLayout><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CheckBoxFillupDay" android:id="@+id/CheckBoxFillupDayEnd"></CheckBox>
			

</LinearLayout>
		</LinearLayout></TableRow></TableLayout>
		



<LinearLayout android:id="@+id/LinearLayout03" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
<Spinner android:layout_width="fill_parent"  android:layout_height="wrap_content" android:id="@+id/SpinnerHolidayType" android:layout_weight="1"></Spinner>
<CheckBox android:id="@+id/CheckBoxIsPayed"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/CheckBoxIsPayed" android:layout_weight="1"></CheckBox>
</LinearLayout>

<EditText android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/EditTextComment" android:hint="@string/EditTextCommentHint"></EditText>
</LinearLayout>
